# rumusic

./: .env  .gitignore  .gitmodules  docker-compose.yml  hello.rtf  package-lock.json
backend/: .pylintrc  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3142e105edca_create_table_users_role.py
backend/app/: main.py
backend_engine/: alembic.ini  logging_config.json  requirements.txt
backend_engine/alembic/: env.py
backend_engine/app/: main.py
backend_engine/dumps/: role.sql
backend_main/: Cargo.toml  Dockerfile  diesel.toml
backend_main/migrations/2024-07-17-152435_create_users/: up.sql
backend_main/src/: db.rs  main.rs  schema.rs
backend_main/src/models/: mod.rs  playlist.rs  track.rs
backend_main/src/modules/auth/: claims.rs  handler.rs  manager.rs  mod.rs  model.rs  sign_in.rs  sign_up.rs  signin.rs  signup.rs  utils.rs
backend_main/src/routes/: mod.rs  playlist_routes.rs  track_routes.rs  user_routes.rs
backend_private/: Dockerfile  go.mod  go.sum
backend_private/models/: song.go  track.go  user.go  utils.go
backend_private/routes/: routes.go
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
frontend_main/: package-lock.json  package.json
lib/: .dockerignore  Cargo.toml  Dockerfile  rlib.py
lib/examples/: example_usage.rs
lib/integration_examples/: integration_python_examples
lib/src/: bindings.rs  lib.rs  pwd.rs
lib/tests/: integration_test.rs
microservices/goservices/: Dockerfile  go.mod  go.sum  main.go
microservices/pyservices/: Dockerfile  requirements.txt
(+32 files in other folders)
