[package]
name = "backend_main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-web-httpauth = "0.8.2"
actix-files = "0.6"  # or your current version
bcrypt = "0.15.1"
chrono = "0.4.38"
diesel = {version="2.2.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = "1.38.1"
tokio-postgres = "0.7.10"
utc = "0.2.0"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
uuid = {version="1.10.0", features = ["v4"]}
sha2 = "0.10.8"
hmac = "0.12.1"
actix-service = "2.0.2"
actix-cors = "0.7.0"
